see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

04-Feb-2012 Christophe Demko
 # [#27960] Unable to create an article (Sudhi Seshachala)

04-Feb-2012 Jean-Marie Simonet
 # [#26468] Unable to install multiple updates at once. Thanks Rune and Jeremy
 # [#27918] Date format in /plugins/usr/profile/profile.php is wrong. Thanks Ofer.
 # [#27870] Joomla 2.5 com_content generates non-valid xhtml. Thanks Mihail
 # [#27966] *Wrong constants in article menu item
 # Deleting obsolete lang files (plg_system_finder)
 # [#27972] Multilanguage Status module report version 1.7.1 should be 2.5.x
 # [#27600] Editor-XTD buttons Issues in FireFox 9. Thanks Ofer.
 # [#27853] error notice using search in joomla 2.5. Thanks Ofer.

-------------------- 2.5.1 Stable Release [02-Feb-2012] ------------------

01-Feb-2012 Mark Dexter
 ^ [#27941] Add warning/no warning icons on Database screen
 # [#27938] labels missing for Smart Search / Finder module

01-Feb-2012 Christophe Demko
 # [#27920] Update SQL query requires temp table permissions (Mark Dexter)
 # [#27873] The related articles modules (mod_related_items) are not showing (Mark Dexter)

01-Feb-2012 Jean-Marie Simonet
 # [#27929] *Installing sample data and defining as site lang another lang then English breaks links. Thanks Christophe.
 $ [#27796] COM_USERS_FITLER_NOTES. Thanks Brian.
 $ Other language corrections com_media.
 # [#27774] Joomla on Windows Azure - Load time is slow. Thanks Sudhi
 # [#27581] Basic Search contact search is broken. Thanks Elin.
 # [#27890] mod_menu invalid rendering of items of type alias and url. Thanks Elin.